# trurl

./: .travis.yml  LICENSE  README.md  cabal.config  stack.yaml  trurl.cabal
devrepo/: haskeleton.metainfo  haskeleton.tar.metainfo  json-entity.hs  json-entity.hs.metainfo  scotty-entity.hs  scotty-entity.hs.metainfo  scotty-mysql.metainfo  srv-converter  srv-crud  srv-db-entity.metainfo  srv-json-entity.metainfo
devrepo/haskeleton/: Haskeleton.hs.template  LICENSE.md  LICENSE.md.template  Makefile.template  ProjectName.cabal.template  README.md  README.md.template
devrepo/haskeleton/benchmark/: Bench.hs.template  ProjectNameBench.hs.template
devrepo/haskeleton/executable/: Main.hs.template
devrepo/haskeleton/test-suite/: ProjectNameSpec.hs.template
devrepo/scotty-mysql/: ProjectName.cabal.template  README.md  application.conf  dump.sql  scotty-mysql  scotty-mysql.cabal  scotty-mysql.cabal.template
devrepo/scotty-mysql/src/: Article.hs  Db.hs  Main.hs  Views.hs
devrepo/servant/: .projectile  ProjectName.cabal.template  application.conf  mysql.sql.template
devrepo/servant/app/: Main.hs
devrepo/servant/src/: AppConfig.hs  Lib.hs
devrepo/servant/src/Auth/: AuthHeader.hs  DbAuth.hs
devrepo/servant/src/Convert/: UserConverter.hs
devrepo/servant/src/Db/: Common.hs  User.hs
devrepo/servant/src/Json/: User.hs
repository/: example.tar  mainRepo.tar  registry.json
repository/templates/: haskeleton.tar  servant.tar  servant.tar.metainfo  srv-converter.metainfo  srv-crud.metainfo  srv-db-entity  srv-json-entity
src/: Main.hs  Registry.hs  SimpleParams.hs  Trurl.hs
tests/: Main.hs
