name:                trurl
version:             0.2.1
synopsis:            Haskell template code generator
-- description:         
homepage:            http://github.com/dbushenko/trurl
license:             BSD3
license-file:        LICENSE
author:              dbushenko
maintainer:          d.bushenko@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Trurl
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , directory
                     , bytestring
                     , text
                     , tar
                     , hastache
                     , aeson
                     , scientific
                     , unordered-containers
                     , MissingH
                     , filemanip
                     
  default-language:    Haskell2010


executable trurl
  main-is:             src/Main.hs
  build-depends:       base >= 4.7 && < 5
                     , trurl

  default-language:    Haskell2010


  
test-suite tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          tests/Main.hs
  build-depends:    base >= 4.7 && < 5
                  , hastache
                  , tasty
                  , tasty-hunit
                  , trurl
                  