name:                trurl
version:             0.3.0.0
synopsis:            Haskell template code generator
description:
    Trurl is a haskell project and code generating utility. Use it for scaffolding your projects and entities.
    .
    Quick start:
    .
            cabal update
            cabal install trurl
            trurl create MyProject scotty-mysql
            cd MyProject/src
            trurl new Comment scotty-entity 'props:[comment#String, author#String!]'
    .
    Trurl allows creating your own templates for projects as well as for files. Just put them to ~/.trurl/repo.       
    .
    For more details read here http://github.com/dbushenko/trurl
    
homepage:            http://github.com/dbushenko/trurl
license:             BSD3
license-file:        LICENSE
author:              dbushenko
maintainer:          d.bushenko@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
    
  exposed-modules:     Trurl
                     , SimpleParams
                     
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , directory
                     , bytestring
                     , text
                     , tar
                     , hastache
                     , aeson
                     , scientific
                     , unordered-containers
                     , MissingH
                     , filemanip
                     , safe
                     
  default-language:    Haskell2010


executable trurl
  main-is:             src/Main.hs
  build-depends:       base >= 4.7 && < 5
                     , trurl

  default-language:    Haskell2010


  
test-suite tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          tests/Main.hs
  build-depends:    base >= 4.7 && < 5
                  , hastache
                  , tasty
                  , tasty-hunit
                  , trurl
                  